--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>M's Core 2 Site</title>
 </head>
 <body>
-    <h1>;l</h1>
+    <h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
 </body>
 </html>
