--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>M's Core 2 Site</title>
 </head>
 <body>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
 </body>
 </html>
