--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<div class="container"> 
-<p lang="en-GB">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M's Core 2 Site</title>
-</head>
-<body>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
-</body>
+<html>
+	<head>
+		<style>
+			body { font: normal 24px Arial; text-align: center; }
+		</style>
+	</head>
+	<body>
+		<h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
+		<p><em>Things are going well.</em></p>
+		<p></p>
+	</body>
 </html>
