--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<style>
-			body { font: normal 24px Arial; text-align: center; }
+			body { font: normal 40px Spartan; text-align: center; color: #551c1c;}
 		</style>
 	</head>
 	<body>
 		<h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
-		<p><em>Things are going well.</em></p>
+		<p><em>For CS2</em></p>
 		<p></p>
 	</body>
 </html>
