--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-			body { font: normal 40px Spartan; text-align: center; color: #551c1c;}
-		</style>
 	</head>
 	<body>
 		<h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
-		<p><em>For CS2</em></p>
+		<h2> <p><em>For CS2</em></p> <h2>
 		<p></p>
 	</body>
 </html>
