--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 		</style>
 	</head>
 	<body>
-		<h1>M's Core 2 Site That Won't Load Because It Hates Me</h1>
-		<p><em>For CS2</em></p>
+		<h1>M's Core 2 Site</h1>
+		<h2><p>2022</p></h2>
 		<p></p>
 	</body>
 </html>
+
