--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css" 	<a href="design.html "color: #ffffff; style="text-decoration:none;"
+ />
 <html>
 	<head>
 	</head>
@@ -8,5 +9,9 @@
 		<h2><p>2022</p></h2>
 		<p></p>
 	</body>
+  <h3>
+	<a href="design.html "color: #ffffff; style="text-decoration:none;"
+ class="design">PROJECTS</a>
+    </h3?
 </html>
 
