--- a/design.html
+++ b/design.html
@@ -11,7 +11,12 @@
 	</body>
   <h3>
 	<a href="design.html "color: #ffffff; style="text-decoration:none;"
- class="design">PROJECTS</a>
-    </h3?
+ class="design">PROJECT 1</a>
+  </h3>
+
+    <h4>
+        <a href="design.html "color: #ffffff; style="text-decoration:none;"
+     class="design">PROJECT 2</a>
+    </h4>
 </html>
 
