--- a/design.html
+++ b/design.html
@@ -10,7 +10,7 @@
 		<p></p>
 	</body>
   <h3>
-	<a href="design.html "color: #ffffff; style="text-decoration:none;"
+	<a href="indexp1.html"color: #ffffff; style="text-decoration:none;"
  class="design">PROJECT 1</a>
   </h3>
 
