--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 		<p></p>
 	</body>
   <h3>
-	<a href="design.html "color: #ffffff; style="text-decoration:none;"
+	<a href="index.html"color: #ffffff; style="text-decoration:none;"
  class="design">PROJECTS</a>
-    </h3?
+  </h3>
+  https://teal-torpid-pancake.glitch.me/
 </html>
 
