--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 	<a href="index.html"color: #ffffff; style="text-decoration:none;"
  class="design">PROJECTS</a>
   </h3>
-  https://teal-torpid-pancake.glitch.me/
+  <a href=https://teal-torpid-pancake.glitch.me/> p2 </a>
 </html>
 
