--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
  class="design">PROJECTS</a>
   </h3>
   <h4>
-  <a href=https://teal-torpid-pancake.glitch.me/> p2 </a>
+  <a href=https://teal-torpid-pancake.glitch.me/> P2 </a>
   </h4>
+  <br>
   <h5>
-	<a href=https://puzzled-woolly-euphonium.glitch.me//> p1 </a>
+	<a href=https://puzzled-woolly-euphonium.glitch.me//> P1 </a>
 	</h5>
 </html>
 
