--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
   <h5>
 	<a href=https://puzzled-woolly-euphonium.glitch.me//> P1 </a>
 	</h5>
+
+	<h6>
+		<a href=https://gamy-temporal-animantarx.glitch.me/indexy.html/> P2 </a>
+		</h6>
 </html>
 
