--- a/design.html
+++ b/design.html
@@ -18,5 +18,11 @@
         <a href="design.html "color: #ffffff; style="text-decoration:none;"
      class="design">PROJECT 2</a>
     </h4>
+
+	<h5>
+		<button type="button">MORE NEWS!</button>
+
+
+	</h5>
 </html>
 
