--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		<a href=https://gamy-temporal-animantarx.glitch.me//> P3 </a>
 		</h6>
 
-		<h7>
+		<h8>
 			<div class="img-hover-zoom">
-				<img src="https://pbs.twimg.com/media/FQJ4IwwXwAU_JYX?format=jpg&name=large" alt="This zooms-in really well and smooth">
+				<img src="https://pbs.twimg.com/media/FQJ4IwwXwAU_JYX?format=jpg&name=large" width="200" height="40" ">
 			  </div>
 			  
-			</h7>	
+			</h8>	
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4N0pXHQWDG2Q7SRqZb7ZVd?utm_source=generator" width="10%" height="190" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 </html>
